2007-12-13  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/metadata/TODO:
	* ext/metadata/gstmetadatamux.c:
	* ext/metadata/gstmetadataparse.c:
	* ext/metadata/metadata.c:
	* ext/metadata/metadata.h:
	* ext/metadata/metadataiptc.c:
	* ext/metadata/metadatamuxjpeg.c:
	* ext/metadata/metadatamuxjpeg.h:
	* ext/metadata/metadatamuxpng.c:
	* ext/metadata/metadatamuxpng.h:
	* ext/metadata/metadataparsejpeg.c:
	* ext/metadata/metadataparsejpeg.h:
	* ext/metadata/metadataparsepng.c:
	* ext/metadata/metadataparsepng.h:
	* ext/metadata/metadataparseutil.c:
	* ext/metadata/metadataparseutil.h:
	* ext/metadata/metadatatypes.h:
	* ext/metadata/metadataxmp.c:
	  Code documentation.

2007-12-13  Edgard Lima  <edgard.lima@indt.org.br>

	* configure.ac:
	* ext/metadata/Makefile.am:
	* ext/metadata/gstmetadatamux.c:
	* ext/metadata/gstmetadataparse.c:
	* ext/metadata/metadataexif.c:
	* ext/metadata/metadatatags.c:
	* ext/metadata/test/Makefile:
	* ext/metadata/test/MetadataEditorMain.glade:
	* ext/metadata/test/metadata_editor.c:
	  Added a test application. Added some EXIF tags. Fixed a muxer bug.

2007-12-13  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/videoparse/gstvideoparse.c: (gst_video_parse_init),
	  (gst_video_parse_src_event), (gst_video_parse_src_query_type):
	  Implement a query type function for the src pad, implement seeking
	  and use ANY caps for the sink pad as the element doesn't care what
	  caps the input has and everything is handled via properties.

2007-12-13  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/videoparse/gstvideoparse.c: (gst_video_parse_convert),
	  (gst_video_parse_sink_event):
	  Handle -1 values for the CONVERT query too.

2007-12-13  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/videoparse/gstvideoparse.c: (gst_video_parse_sink_event):
	  Add YV12 to the pad templates as it is supported too and allow
	  -1 as stop position for NEWSEGMENT events.

2007-12-13  Sebastian Dröge  <slomo@circular-chaos.org>
